Fix card height and image spacing in repositories view

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -5,3 +5,15 @@
 .card-title > a {
   font-size: 1.25rem;
 }
+
+.card-img-top {
+  max-height: 14rem;
+  overflow: hidden;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
